# flask-tutorial-project-watchlist

./: .flaskenv  .gitignore  README.md  notes.txt  pyproject.toml
movie_directory/: __init__.py  routes.py
movie_directory/static/css/: main.css
movie_directory/templates/: index.html  layout.html
movie_directory/templates/macros/: footer.html  nav.html
movie_library/: __init__.py  forms.py  models.py  routes.py
movie_library/static/css/: main.css
movie_library/templates/: index.html  movie_details.html  new_movie.html  register.html
movie_library/templates/macros/: fields.html  nav.html
